--- a/assets/css/scss/_top.scss
+++ b/assets/css/scss/_top.scss
@@ -68,7 +68,6 @@
     &.w265{
         max-width: 265px;
         padding: 15px 40px 15px 30px;
-        margin: 15px auto 0 0;
     }
 
     &.w296{
@@ -769,13 +768,95 @@
 
 .topPointMap__btnBox{
     position: absolute;
-    bottom: 70px;
+    bottom: 410px;
     right: 50px;
     width: 265px;
 }
 
 .topPointMap__btn{
     margin-left: auto;
+}
+
+.coordinateList {
+    display: flex;
+    gap: 0 36px;
+    margin-top: 45px;
+}
+
+.coordinateList__item {
+    background-color: #FFFFFF;
+    border-radius: 15px;
+    padding: 22px 25px;
+    flex: 1;
+}
+
+.coordinateList__ttl {
+    font-size: 12px;
+    font-weight: 600;
+    color: #0243A6;
+    margin-bottom: 17px;
+}
+
+.coordinateList__lead {
+    font-size: 18px;
+    font-weight: 600;
+    color: #0243A6;
+    margin-bottom: 18px;
+
+    strong{
+        margin: 0 5px;
+    border: solid 1px #bebebe;
+    padding: 6px 9px 5px;
+    font-weight: 600;
+    }
+}
+
+.coordinateList__comboBox{
+    display: flex;
+    gap: 0 36px;
+}
+
+.coordinateList__combo {
+    
+}
+
+.coordinateList__linkBox {
+
+}
+
+.coordinateList__link {
+
+}
+
+.coordinateList__imgBox {
+    border-radius: 10px;
+    overflow: hidden;
+    width: 200px;
+    height: 148px;
+    aspect-ratio: 200/148;
+    margin-bottom: 14px;
+}
+
+.coordinateList__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.coordinateList__txt {
+    font-size: 15px;
+    font-weight: 600;
+    color: #0243A6;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+}
+
+.coordinateList__txt-ico {
+    width: 17px;
+    height: 17px;
 }
 
 
@@ -824,6 +905,231 @@
     height: 100%;
     object-fit: cover;
 }
+
+/*――――――――――――――――――――――――――――――――――――――――――――
+/* topTrialArea
+――――――――――――――――――――――――――――――――――――――――――――――*/
+
+.topShopTourArea {
+
+    padding-top: 50px;
+    padding-bottom: 67px;
+    background: url(../img/bg_gray-repeat-wave.svg) repeat center center;
+    background-size: 30px 21px;
+    overflow: hidden;
+}
+
+.topShopTourBox {
+    text-align: center;
+}
+
+.topShopTourList {
+    margin-top: 45px;
+    display: flex;
+    gap: 0 29px;
+}
+
+.topShopTourList__item {
+    width: calc((100% - 58px)/3);
+    background-color: #FFFFFF;
+    border-radius: 5px;
+    box-shadow: 0 3px 6px (rgb(0, 0, 0,0.16));
+}
+
+.topShopTourList__imgBox {
+    width: 100%;
+    height: auto;
+    aspect-ratio: 314/203;
+}
+
+.topShopTourList__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.topShopTourList__contBox {
+    padding: 23px 22px 26px;
+}
+
+.topShopTourList__tourName {
+    display: flex;
+    align-items: center;
+    font-size: 24px;
+    font-weight: 600;
+    color: #0243A6;
+    gap: 0 14px;
+    margin-bottom: 20px;
+}
+
+.topShopTourList__txt-ico {
+    width: 22px;
+    height: 22px;
+}
+
+.topShopTourList__dateBox {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 0 0 17px 0px;
+    padding: 6px 17px;
+    background-color: #eff6fc;
+    border-radius: 5px;
+}
+
+.topShopTourList__dateTtl {
+    margin: 0 10px 0 0;
+    font-size: 15px;
+    font-weight: 600;
+}
+
+.topShopTourList__date {
+    font-size: 15px;
+}
+
+.topShopTourList__txt {
+    text-align: left;
+}
+
+
+.topShopTour__btn{
+    margin-left: auto;
+}
+
+/**********************************************************
+
+topBlog
+
+***********************************************************/
+.topBlogArea {
+    padding-top: 68px;
+    padding-bottom: 90px;
+    overflow: hidden;
+
+    .categoryTtl{
+        text-align: center;
+    }
+  }
+  .topBlogList {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 35px 29px;
+  }
+  .topBlogList__item {
+    width: calc((100% - 58px) / 3);
+  }
+  .topBlogList__link {
+    display: block;
+  
+    &:hover {
+      opacity: 1;
+    }
+    &:hover .topBlogList__img {
+      transform: scale(1.1);
+    }
+  }
+  .topBlogList__imgBox {
+    position: relative;
+    margin: 0 0 10px 0;
+    overflow: hidden;
+    border-radius: 5px;
+    z-index: 1;
+  
+    &::before {
+      display: block;
+      top: 0;
+      left: 0;
+      width: 100%;
+      padding-top: 100%;
+      content: "";
+    }
+  
+    > img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  .topBlogList__cat {
+    position: absolute;
+    min-width: 120px;
+    top: 20px;
+    left: 0;
+    z-index: 1;
+    background-color: #0243a6;
+    color: #fff;
+    font-weight: 600;
+    font-size: 12px;
+    padding: 4px 7px;
+    text-align: center;
+    border-radius: 0 1px 1px 0;
+  }
+  .topBlogList__img {
+    transition: 0.5s;
+  }
+  .topBlogList__cont {
+  }
+  .topBlogList__ttl {
+    display: inline;
+    color: #30333c;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 1.625;
+  }
+  .topBlogList__date {
+    margin-left: 3px;
+    display: inline;
+    color: #bcbcbc;
+    font-size: 12px;
+  }
+  .topBlogList__btnBox {
+
+  }
+
+  .topBlogList__btn {
+    margin-left: auto;
+  }
+  
+  
+
+
+
+
+
+/*――――――――――――――――――――――――――――――――――――――――――――
+/* breadArea
+――――――――――――――――――――――――――――――――――――――――――――――*/
+
+.breadArea {
+    position: relative;
+    z-index: 2;
+    padding: 8px 15px;
+    background-color: #f1f6f9;
+  }
+
+  .breadNav {
+
+  }
+
+  .breadNavList {
+    display: flex;
+    overflow: auto;
+  }
+
+  .breadNavList__item {
+    margin: 0 28px 0 0;
+    font-size: 14px;
+    position: relative;
+    color: #30333c;
+    line-height: 1.43;
+    white-space: nowrap;
+  }
+
+
 
 
 
