--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -923,6 +923,41 @@ footer
 }
 
 /*――――――――――――――――――――――――――――――――――――――――――――
+/* pageTtl
+――――――――――――――――――――――――――――――――――――――――――――――*/
+.pageTtl {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  height: 100%;
+  z-index: 5;
+}
+
+.pageTtl__en {
+  display: block;
+  margin: 0 0 9px 0;
+  font-size: 26px;
+  color: #fff;
+  text-align: center;
+  line-height: 1.2;
+  font-family: "fot-chiaro-std";
+  font-weight: 700;
+}
+
+.pageTtl__ja {
+  display: block;
+  font-size: 48px;
+  color: #fff;
+  text-align: center;
+  line-height: 1.14;
+  letter-spacing: -0.03em;
+  font-family: "fot-chiaro-std";
+  font-weight: 700;
+}
+
+/*――――――――――――――――――――――――――――――――――――――――――――
 /* topKvArea
 ――――――――――――――――――――――――――――――――――――――――――――――*/
 .topKvArea {
@@ -1892,4 +1927,164 @@ topBlog
   color: #30333c;
   line-height: 1.43;
   white-space: nowrap;
+}
+.breadNavList__item + .breadNavList__item::before {
+  position: absolute;
+  top: 0;
+  left: -14px;
+  bottom: 0;
+  margin: auto;
+  display: block;
+  content: "";
+  width: 1px;
+  height: 13px;
+  background-color: #d8d8d8;
+  transform: rotate(25deg);
+}
+
+/*――――――――――――――――――――――――――――――――――――――――――――
+/* lowerKvArea
+――――――――――――――――――――――――――――――――――――――――――――――*/
+.lowerKvArea {
+  width: 100%;
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+/*――――――――――――――――――――――――――――――――――――――――――――
+/* blogArea
+――――――――――――――――――――――――――――――――――――――――――――――*/
+.blogList {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px 29px;
+}
+
+.blogList__item {
+  width: calc((100% - 58px) / 3);
+  max-width: 314px;
+  position: relative;
+}
+
+.blogList__link:hover .blogList__img {
+  transform: scale(1.1);
+  transition: 0.5s;
+}
+
+.blogList__imgBox {
+  width: 100%;
+  height: auto;
+  aspect-ratio: 1/1;
+  border-radius: 5px;
+  overflow: hidden;
+  position: relative;
+}
+
+.blogList__img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transform: scale(1);
+}
+
+.blogList__category {
+  min-width: 120px;
+  padding: 2px 6px;
+  background: #0243a6;
+  border-radius: 0 1px 1px 0;
+  color: #fff;
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 1.86;
+  text-align: center;
+  position: absolute;
+  top: 20px;
+  left: 0;
+  z-index: 5;
+}
+
+.blogList__txtBox {
+  margin-top: 10px;
+}
+
+.blogList__ttl {
+  color: #30333c;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.625;
+}
+
+.blogList__date {
+  margin-left: 8px;
+  color: #bcbcbc;
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 2.333333333;
+}
+
+@media screen and (max-width: 767px) {
+  .blogList {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px 15px;
+  }
+  .blogList__item {
+    width: calc((100% - 15px) / 2);
+    max-width: 314px;
+    position: relative;
+  }
+}
+/*――――――――――――――――――――――――――――――――――――――――――――
+/* blogPagination
+――――――――――――――――――――――――――――――――――――――――――――――*/
+.blogPagination {
+  margin-top: 44px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.blogPagination .page-number {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.blogPagination .page-numbers {
+  width: 37px;
+  height: 37px;
+  color: #1c2952;
+  border-radius: 50%;
+  font-size: 16px;
+  line-height: 1.68;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.blogPagination .prev.page-numbers.disabled {
+  background: url(../img/blog/ico_pagenav_arrow_disabled.svg) no-repeat center/contain;
+  pointer-events: none;
+}
+.blogPagination .page-numbers.prev {
+  width: 25px;
+  height: 19px;
+  background: url(../img/blog/ico_pagenav_arrow.svg) no-repeat center/contain;
+  display: block;
+  transition: 0.3s;
+  margin-right: 24px;
+}
+.blogPagination .page-numbers.current {
+  background: #0243a6;
+  color: #fff;
+}
+.blogPagination .page-numbers.next {
+  width: 25px;
+  height: 19px;
+  background: url(../img/blog/ico_pagenav_arrow.svg) no-repeat center/contain;
+  display: block;
+  transition: 0.3s;
+  margin-left: 24px;
 }/*# sourceMappingURL=style.css.map */
